# hyper-greco

./: .gitignore  Cargo.toml  README.md
benches/: bvf_sk_encrypt.rs
bfv-gkr/: Cargo.toml
bfv-gkr/src/: lib.rs  poly.rs  sk_encryption_circuit.rs  test.rs  transcript.rs
bfv-gkr/src/constants/: mod.rs  sk_enc_constants_1024_1x27_65537.rs  sk_enc_constants_16384_8x46_786433.rs  sk_enc_constants_2048_1x52_65537.rs  sk_enc_constants_32768_16x59_65537.rs  sk_enc_constants_4096_2x55_65537.rs  sk_enc_constants_8192_4x55_65537.rs
bfv-gkr/src/data/bn254/: sk_enc_4096_2x55_65537.json
bfv-gkr/src/data/goldilocks/: sk_enc_2048_1x52_65537.json  sk_enc_4096_2x55_65537.json
bfv-rs/: Cargo.toml
bfv-rs/src/: lib.rs  main.rs  poly.rs
bfv-witgen/: Cargo.toml
bfv-witgen/src/: lib.rs  poly.rs
lasso/: Cargo.toml
lasso/src/: lasso.rs  lib.rs
lasso/src/memory_checking/: mod.rs
scripts/: circuit_sk.py  requirements.txt  utils.py
scripts/bfv/: bfv.py  crt.py  discrete_gauss.py  ntt.py  polynomial.py  utils.py
src/: lib.rs  pcs.rs  poly.rs  range.rs  sk_encryption_circuit.rs  test.rs  transcript.rs
src/constants/: mod.rs  sk_enc_constants_1024_2x55_65537.rs  sk_enc_constants_1024_4x55_65537.rs  sk_enc_constants_16384_8x54_65537.rs  sk_enc_constants_2048_2x55_65537.rs  sk_enc_constants_32768_15x59_65537.rs  sk_enc_constants_32768_16x59_65537.rs  sk_enc_constants_8192_4x55_65537.rs
src/data/: sk_enc_1024_1x27_65537.json  sk_enc_1024_1x55_65537.json  sk_enc_1024_2x55_65537.json  sk_enc_1024_2x55_65537_zeroes.json  sk_enc_1024_4x55_65537.json  sk_enc_1024_4x55_65537_zeroes.json  sk_enc_8192_4x55_65537.json
src/data/bn254/: sk_enc_1024_1x27_65537.json  sk_enc_2048_1x52_65537.json
src/lasso/: mod.rs  table.rs
src/lasso/memory_checking/: mod.rs  prover.rs  verifier.rs
src/lasso/prover/: mod.rs
src/lasso/table/: range.rs
src/lasso/verifier/: mod.rs
web-demo/: Cargo.toml  Makefile  index.html  index.js  package-lock.json  package.json  tsconfig.json  worker.js
web-demo/src/: lib.rs
