[package]
name = "gkreco"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde = { version = "=1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
itertools = "0.11"
prettytable = "0.10.0"
gkr = { git = "https://github.com/han0110/gkr" }
rayon = "1.8.0"
digest = "0.10.1"
typenum = "1.12.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
plonkish_backend = { git = "https://github.com/han0110/plonkish" }
strum = "0.26.0"
strum_macros = "0.26.4"
enum_dispatch = "0.3.12"
ark-std = { version = "0.4.0" }
fixedbitset = "0.5"
paste = "1.0"
seq-macro = "0.2"

[dev-dependencies]
gkr = { git = "https://github.com/han0110/gkr", features = ["dev"] }
criterion = "0.5.1"
goldilocks = { git = "https://github.com/han0110/goldilocks", branch = "feature/qe_op_b" }
halo2_curves = { version = "0.7.0", package = "halo2curves", features = [
    "derive_serde",
] }
blake3 = { version = "1", features = ["traits-preview"] }


[features]
bench = []
sanity-check = []

[profile.dev]
opt-level = 3
debug = 2              # change to 0 or 2 for more or less debug info
overflow-checks = true
incremental = true

# Local "release" mode, more optimized than dev but faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 3
# Set this to 1 or 2 to get more useful backtraces
debug = 1
debug-assertions = true
panic = 'unwind'
# better recompile times
incremental = true
lto = "thin"
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat"
# `codegen-units = 1` can lead to WORSE performance - always bench to find best profile for your machine!
codegen-units = 1
panic = "abort"
incremental = false

[patch."https://github.com/han0110/gkr"]
gkr = { path = "../examples/gkr/gkr" }

[patch."https://github.com/han0110/plonkish"]
plonkish_backend = { git = "https://github.com/DoHoonKim8/halo2-lasso", branch = "feature/Lasso" }

[patch."https://github.com/han0110/goldilocks"]
goldilocks = { path = "../Goldilocks" }
