[workspace]
members = ["bfv-gkr", "bfv-witgen", "lasso", "web-demo"]

[workspace.dependencies]
rand = "0.8.5"
serde = { version = "=1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
itertools = "0.11"
prettytable = "0.10.0"
gkr = { git = "https://github.com/nulltea/gkr-lasso" }
rayon = "1.8.0"
digest = "0.10.1"
typenum = "1.12.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
plonkish_backend = { git = "https://github.com/han0110/plonkish" }
strum = "0.26.0"
strum_macros = "0.26.4"
enum_dispatch = "0.3.12"
ark-std = { version = "0.4.0" }
fixedbitset = "0.5"
paste = "1.0"
wasm-bindgen = "0.2.90"
num-bigint = "0.4"
num-traits = "0.2"
bfv = { git = "https://github.com/Janmajayamall/bfv.git", features = [
    "serialize",
    "std",
], branch = "wasm" }
traits = { git = "https://github.com/Janmajayamall/bfv.git", branch = "wasm" }


# Dev dependencies
serial_test = "3.1"
criterion = "0.5.1"
goldilocks = { git = "https://github.com/han0110/goldilocks", branch = "feature/qe_op_b" }
halo2_curves = { version = "0.7.0", package = "halo2curves", features = [
    "derive_serde",
] }
blake3 = { version = "1", features = ["traits-preview"] }

[profile.dev]
opt-level = 3
debug = 2              # change to 0 or 2 for more or less debug info
overflow-checks = true
incremental = true

# Local "release" mode, more optimized than dev but faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 3
# Set this to 1 or 2 to get more useful backtraces
debug = 1
debug-assertions = true
panic = 'unwind'
# better recompile times
incremental = true
lto = "thin"
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat"
# `codegen-units = 1` can lead to WORSE performance - always bench to find best profile for your machine!
# codegen-units = 1
panic = "abort"
incremental = false

[patch."https://github.com/han0110/goldilocks"]
goldilocks = { git = "https://github.com/nulltea/goldilocks", branch = "wasm" }
# goldilocks = { path = "../goldilocks" }

[patch."https://github.com/Janmajayamall/bfv.git"]
bfv = { path = "../examples/bfv/bfv" }
traits = { path = "../examples/bfv/traits" }
