[package]
name = "bfv-witgen"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
num-bigint.workspace = true
num-traits.workspace = true
ndarray = { version = "0.15.6", features = ["rayon"] }
itertools = "0.13.0"
rayon = "1.10.0"
concrete-ntt = { git = "https://github.com/zama-ai/concrete-ntt", features = [
    "nightly",
] }
bfv.workspace = true
traits.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-forest.workspace = true

[features]
sanity-check = []
