[package]
name = "web-demo"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "-O4"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.93"
js-sys = "0.3.70"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = [
    "console",
] }
wasm-bindgen-rayon = { version = "1.2.1" }
console_error_panic_hook = { version = "0.1.7" }
serde-wasm-bindgen = { version = "0.6.0" }

bfv-gkr = { path = "../bfv-gkr" }
bfv-rs = { path = "../bfv-rs" }

rayon = { version = "1.8", features = ["web_spin_lock"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
goldilocks.workspace = true

paste = "1"
tracing-subscriber = { version = "0.3.18" , features = ["time"] }
tracing = { version = "0.1.40", default-features = false }

tracing-web = "0.1.3"
time = { version = "0.3", features = ["wasm-bindgen"] }
tracing-forest = { git = "https://github.com/ec2/tracing-forest.git", rev = "1708343aa02500fa4e3f4d9a3eb5353559269a7b", features = ["smallvec"] }
chrono = { version = "0.4.38", default-features = false, features = ["wasmbind"] }
web-time = "1.1.0"